manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: health-check-app
  template:
    metadata:
      labels:
        app: health-check-app
    spec:
      containers:
      - name: healthcheck
        image: russbalabanov/docker-homework:v2
        ports:
        - name: web
          containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 15
          failureThreshold: 1
