manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-homework
  annotations:
    nginx.org/server-snippets: |
      location = /otusapp/ruslan_balabanov {
         rewrite ^ /health;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-check-service #the label of the service
                port:
                  number: 8080
